--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,7 +29,8 @@
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-  <!-- Latest compiled and minified CSS -->
+ <link rel="stylesheet" href="/reset.css"/>
+    <!-- Latest compiled and minified CSS -->
 
 
   <title>Buzz Buddy</title>
